# mailflow-automation-service

./: .env.sample  .flake8  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
config/: settings.py  urls.py
mailings/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailings/management/commands/: send_mailings.py
mailings/migrations/: 0001_initial.py  0002_alter_newsletter_options_and_more.py  0002_alter_newsletter_recipients.py  0003_alter_message_content.py  0003_alter_newsletter_recipients.py  0004_alter_newsletter_recipients.py  0005_alter_mailingrecipient_comment_and_more.py  0006_alter_newsletter_end_date_of_send_and_more.py  0007_attempttosend_owner_mailingrecipient_owner_and_more.py  0008_alter_mailingrecipient_options_and_more.py  0009_message_owner.py  0010_alter_message_options.py  0011_newsletter_newsletter_is_disabled.py  0012_alter_newsletter_options.py
mailings/templates/includes/: inc_menu.html
mailings/templates/mailings_mailing_recipient/: mailing_recipient_create.html  mailing_recipient_delete.html  mailing_recipient_detail.html  mailing_recipient_list.html  mailing_recipient_update.html
tests/: conftest.py  test_mailings.py  test_users.py
users/: apps.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_alter_user_country.py  0004_alter_user_username.py  0005_alter_user_username.py  0006_alter_user_options.py  0007_alter_user_is_active.py  0008_alter_user_is_active.py
(+19 files in other folders)
